--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,11 +13,24 @@ layout: default
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}</p>
+
+      {% if page.tags %}
+        <span> | </span>
+        {% for tag in page.tags %}
+          <span>
+            <a href='/blog/tags/{{tag}}'>{{ tag }}{{ page.tags.length }}</a>{% if forloop.last==false %}, {% endif %}
+            
+          </span>
+        {% endfor %}
+      {% endif %}
+
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
+
+
 
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
